Mejoras en diseño

--- a/PreOrclFrontEnd/Views/Shared/_Layout.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
     <!-- Right Panel -->
     <div id="right-panel" class="right-panel">
         <!-- Header-->
-        <partial name="_HeaderPartial"  />
+        <partial name="_HeaderPartial" />
         <!-- /#header -->
         <!-- Content -->
         @RenderBody()
@@ -184,7 +184,7 @@
 
     @RenderSection("Scripts", required: false)
     <!--Scripts Sections-->
-
+    @*<div class="modal-backdrop"></div>*@
 </body>
 
 </html>
