Mejoras en código

--- a/PreOrclFrontEnd/Views/Modals/_LargeModalPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Modals/_LargeModalPartial.cshtml
@@ -2,10 +2,10 @@
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<div class="modal fade show" id="largeModal" tabindex="-1" role="dialog" aria-labelledby="largeModalLabel" aria-hidden="true">
+<div class="modal fade" id="largeModal" tabindex="-1" role="dialog" aria-labelledby="largeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content" id="largeModalPartial">
-          
+            <div class="loader"></div>
         </div>
     </div>
 </div>
