--- a/PreOrclFrontEnd/Views/SisPerPersonas/_DetailsPartial.cshtml
+++ b/PreOrclFrontEnd/Views/SisPerPersonas/_DetailsPartial.cshtml
@@ -3,7 +3,7 @@
     <div class="modal-header">
         <h5 class="modal-title" id="largeModalLabel">Detalle</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true"></span>
+            <span aria-hidden="true">&times;</span>
         </button>
     </div>
 
@@ -16,16 +16,15 @@
             <div class="col-sm-6">
                 <label asp-for="per_nombre_razon" class="form-control-label"></label>
                 <div class="input-group">
-                    <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
+                    <div class="input-group-addon"><i class="fa fa-user"></i></div>
                     <input asp-for="per_nombre_razon" class="form-control" disabled="disabled" />
                 </div>
                 @*<small class="form-text text-muted">ex. 99/99/9999</small>*@
             </div>
             <div class="col-sm-6">
                 <label asp-for="per_apellido_comercial" class="form-control-label"></label>
-                <label class=" form-control-label">Phone input</label>
                 <div class="input-group">
-                    <div class="input-group-addon"><i class="fa fa-phone"></i></div>
+                    <div class="input-group-addon"><i class="fa fa-users"></i></div>
                     <input asp-for="per_apellido_comercial" class="form-control" disabled="disabled" />
                 </div>
                 @*<small class="form-text text-muted">ex. (999) 999-9999</small>*@
@@ -63,13 +62,13 @@
                     <div class="input-group-addon"><i class="fa fa-usd"></i></div>
                     <input asp-for="per_direccion_municipio" class="form-control" disabled="disabled" />
                 </div>
-                <small class="form-text text-muted">ex. 99-9999999</small>
+                @*<small class="form-text text-muted">ex. 99-9999999</small>*@
             </div>
         </div>
 
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" onclick="HideLarModalDetailOnclick('#largeModal')">Cancelar</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
         <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model.per_IDPER">Editar</a>
     </div>
 
