--- a/PreOrclFrontEnd/Views/Modals/_LargeModalPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Modals/_LargeModalPartial.cshtml
@@ -5,7 +5,7 @@
 <div class="modal fade" id="largeModal" tabindex="-1" role="dialog" aria-labelledby="largeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content" id="largeModalPartial">
-            <div class="loader"></div>
+            <div class="loader" style="margin-left:50%;"></div>
         </div>
     </div>
 </div>
