--- a/PreOrclFrontEnd/Views/SisPerPersonas/Create.cshtml
+++ b/PreOrclFrontEnd/Views/SisPerPersonas/Create.cshtml
@@ -4,98 +4,209 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
-
-<h4>SisPerPersona</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="per_nombre_razon" class="control-label"></label>
-                <input asp-for="per_nombre_razon" class="form-control" />
-                <span asp-validation-for="per_nombre_razon" class="text-danger"></span>
+<div class="breadcrumbs">
+    <div class="breadcrumbs-inner">
+        <div class="row m-0">
+            <div class="col-sm-4">
+                <div class="page-header float-left">
+                    <div class="page-title">
+                        <h1>Agregar</h1>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="per_apellido_comercial" class="control-label"></label>
-                <input asp-for="per_apellido_comercial" class="form-control" />
-                <span asp-validation-for="per_apellido_comercial" class="text-danger"></span>
+            <div class="col-sm-8">
+                <div class="page-header float-right">
+                    <div class="page-title">
+                        <ol class="breadcrumb text-right">
+                            <li><a href="#">Registros</a></li>
+                            <li><a asp-action="Index">Listado Personas</a></li>
+                            <li class="active">Agregar Persona</li>
+                        </ol>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="per_nit" class="control-label"></label>
-                <input asp-for="per_nit" class="form-control" />
-                <span asp-validation-for="per_nit" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_dui_nrc" class="control-label"></label>
-                <input asp-for="per_dui_nrc" class="form-control" />
-                <span asp-validation-for="per_dui_nrc" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_direccion_departamento" class="control-label"></label>
-                <input asp-for="per_direccion_departamento" class="form-control" />
-                <span asp-validation-for="per_direccion_departamento" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_direccion_municipio" class="control-label"></label>
-                <input asp-for="per_direccion_municipio" class="form-control" />
-                <span asp-validation-for="per_direccion_municipio" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_direccion" class="control-label"></label>
-                <input asp-for="per_direccion" class="form-control" />
-                <span asp-validation-for="per_direccion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_telefono" class="control-label"></label>
-                <input asp-for="per_telefono" class="form-control" />
-                <span asp-validation-for="per_telefono" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_movil" class="control-label"></label>
-                <input asp-for="per_movil" class="form-control" />
-                <span asp-validation-for="per_movil" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_email" class="control-label"></label>
-                <input asp-for="per_email" class="form-control" />
-                <span asp-validation-for="per_email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_codigo" class="control-label"></label>
-                <input asp-for="per_codigo" class="form-control" />
-                <span asp-validation-for="per_codigo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_nacionalidad" class="control-label"></label>
-                <input asp-for="per_nacionalidad" class="form-control" />
-                <span asp-validation-for="per_nacionalidad" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_tipo_contribullente" class="control-label"></label>
-                <input asp-for="per_tipo_contribullente" class="form-control" />
-                <span asp-validation-for="per_tipo_contribullente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_dir_cli" class="control-label"></label>
-                <input asp-for="per_dir_cli" class="form-control" />
-                <span asp-validation-for="per_dir_cli" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="per_cobros" class="control-label"></label>
-                <input asp-for="per_cobros" class="form-control" />
-                <span asp-validation-for="per_cobros" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="content">
+    <div class="animated fadeIn">
+
+        <div class="row">
+
+            <div class="col-sm-12">
+                <div class="card">
+                    <div class="card-header">
+                        <strong>Crear Persona</strong> <small></small>
+                    </div>
+                    <form asp-action="Create">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="card-body card-block">
+                            <div class="card-body card-block">
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_nombre_razon" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-user"></i></div>
+                                            <input asp-for="per_nombre_razon" class="form-control"   />
+                                            
+                                        </div>
+                                        <span asp-validation-for="per_nombre_razon" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_apellido_comercial" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-users"></i></div>
+                                            <input asp-for="per_apellido_comercial" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_apellido_comercial" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_nit" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-check-square-o"></i></div>
+                                            <input asp-for="per_nit" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_nit" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_dui_nrc" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-info"></i></div>
+                                            <input asp-for="per_dui_nrc" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_dui_nrc" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_direccion_departamento" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-sitemap"></i></div>
+                                            <input asp-for="per_direccion_departamento" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_direccion_departamento" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_direccion_municipio" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-puzzle-piece"></i></div>
+                                            <input asp-for="per_direccion_municipio" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_direccion_municipio" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_direccion" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-envelope-o"></i></div>
+                                            <input asp-for="per_direccion" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_direccion" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_telefono" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-phone-square"></i></div>
+                                            <input asp-for="per_telefono" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_telefono" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_movil" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-mobile"></i></div>
+                                            <input asp-for="per_movil" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_movil" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_email" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
+                                            <input asp-for="per_email" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_email" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_codigo" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-tag"></i></div>
+                                            <input asp-for="per_codigo" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_codigo" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_nacionalidad" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-flag"></i></div>
+                                            <input asp-for="per_nacionalidad" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_nacionalidad" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-4">
+                                        <label asp-for="per_tipo_contribullente" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa  fa-folder-o"></i></div>
+                                            <input asp-for="per_tipo_contribullente" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_tipo_contribullente" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <label asp-for="per_dir_cli" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-location-arrow"></i></div>
+                                            <input asp-for="per_dir_cli" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_dir_cli" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <label asp-for="per_cobros" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-level-up"></i></div>
+                                            <input asp-for="per_cobros" class="form-control" />
+
+                                        </div>
+                                        <span asp-validation-for="per_cobros" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-12 text-right">
+                                        <input type="submit" value="Guardar" class="btn btn-default" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+
+
+    </div><!-- .animated -->
 </div>
 
 @section Scripts {
