--- a/PreOrclFrontEnd/Views/SisPerPersonas/_DetailsPartial.cshtml
+++ b/PreOrclFrontEnd/Views/SisPerPersonas/_DetailsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Common.Entity.Models.SisPerPersona
+﻿@model PreOrclFrontEnd.Models.SisPerPersona
 
     <div class="modal-header">
         <h5 class="modal-title" id="largeModalLabel">Detalle</h5>
