--- a/PreOrclFrontEnd/Views/Shared/_Layout.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 
     <environment include="Development">
         @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-            <link rel="stylesheet" href="~/css/site.css" />*@
+        <link rel="stylesheet" href="~/css/site.css" />*@
         <link rel="apple-touch-icon" href="https://i.imgur.com/QRAUqs9.png">
         <link rel="shortcut icon" href="https://i.imgur.com/QRAUqs9.png">
 
@@ -25,6 +25,7 @@
 
         <link href="https://cdn.jsdelivr.net/npm/weathericons@2.1.0/css/weather-icons.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/fullcalendar@3.9.0/dist/fullcalendar.min.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="~/css/customtools.css" />
     </environment>
     <environment exclude="Development">
         <link rel="apple-touch-icon" href="https://i.imgur.com/QRAUqs9.png">
@@ -137,6 +138,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="~/templateAdmin/assets/js/main.js"></script>
 
         <!--  Chart js -->
@@ -159,7 +161,7 @@
 
 
         @*<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-            <script src="~/js/site.js" asp-append-version="true"></script>*@
+        <script src="~/js/site.js" asp-append-version="true"></script>*@
 
         <!--Local Stuff-->
 
