--- a/PreOrclFrontEnd/Views/SisPerPersonas/Index.cshtml
+++ b/PreOrclFrontEnd/Views/SisPerPersonas/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Common.Entity.Models.SisPerPersona>
+﻿@model IEnumerable<PreOrclFrontEnd.Models.SisPerPersona>
 
 @{
     ViewData["Title"] = "Index";
@@ -8,28 +8,8 @@
     <link rel="stylesheet" href="~/templateAdmin/assets/css/cs-skin-elastic.css">
     <link rel="stylesheet" href="~/templateAdmin/assets/css/lib/datatable/dataTables.bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
-    <style>
-        .loader {
-            border: 5px solid #f3f3f3;
-            border-radius: 50%;
-            border-top: 5px solid gray;
-            border-bottom: 5px solid gray;
-            width: 80px;
-            height: 80px;
-            -webkit-animation: spin 2s linear infinite;
-            animation: spin 2s linear infinite;
-        }
 
-        @@-webkit-keyframes spin {
-          0% { -webkit-transform: rotate(0deg); }
-          100% { -webkit-transform: rotate(360deg); }
-        }
-
-        @@keyframes spin {
-          0% { transform: rotate(0deg); }
-          100% { transform: rotate(360deg); }
-        }
-    </style>
+        
 }
 
 <div class="breadcrumbs">
