Se suben mejoras en validación Jquery

--- a/PreOrclFrontEnd/Views/SisPerPersonas/Create.cshtml
+++ b/PreOrclFrontEnd/Views/SisPerPersonas/Create.cshtml
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="row form-group">
                                     <div class="col-sm-12 text-right">
-                                        <input type="submit" value="Guardar" onclick="GuardarNotificacion('#createForm','@Url.Action("Create")','@Url.Action("Index")')" class="btn btn-default" />
+                                        <input type="button" value="Guardar" onclick="GuardarNotificacion('#createForm','@Url.Action("Create")','@Url.Action("Index")')" class="btn btn-default" />
                                     </div>
                                 </div>
                             </div>
