--- a/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
@@ -97,7 +97,7 @@
 
                     <a class="nav-link" href="#"><i class="fa fa -cog"></i>Settings</a>
 
-                    <a class="nav-link" href="#"><i class="fa fa-power -off"></i>Logout</a>
+                    <a class="nav-link"  asp-area="" asp-controller="Auth" asp-action="Logout"><i class="fa fa-power -off"></i>Logout</a>
                 </div>
             </div>
 
