--- a/PreOrclFrontEnd/Views/Auth/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Auth/Index.cshtml
@@ -78,7 +78,7 @@
                                 <a href="#">Forgotten Password?</a>
                             </label>
                         </div>
-                        <button type="submit" value="Ingresar"  class="btn btn-success btn-flat m-b-30 m-t-30">Sign in</button>
+                        <button type="submit" value="Ingresar" class="btn btn-success btn-flat m-b-30 m-t-30">Sign in</button>
                         <div class="social-login-content">
                             <div class="social-button">
                                 <button type="button" class="btn social facebook btn-flat btn-addon mb-3"><i class="ti-facebook"></i>Sign in with facebook</button>
@@ -92,6 +92,12 @@
                 </div>
             </div>
         </div>
+
+    </div>
+
+    <div class="row">
+        <a asp-action="Microsoft">Microsofot</a>
+
     </div>
     <environment include="Development">
 
