--- a/PreOrclFrontEnd/Views/Auth/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Auth/Index.cshtml
@@ -96,7 +96,7 @@
     </div>
 
     <div class="row">
-        <a asp-action="Microsoft">Microsofot</a>
+        <a asp-action="Microsoft">Microsoft</a>
 
     </div>
     <environment include="Development">
