--- a/PreOrclFrontEnd/Views/Auth/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Auth/Index.cshtml
@@ -72,22 +72,22 @@
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"> Remember Me
+                                <input type="checkbox"> Recordar
                             </label>
                             <label class="pull-right">
-                                <a href="#">Forgotten Password?</a>
+                                <a href="#">¿Recuperar Contraseña?</a>
                             </label>
                         </div>
-                        <button type="submit" value="Ingresar" class="btn btn-success btn-flat m-b-30 m-t-30">Sign in</button>
+                        <button type="submit" value="Ingresar" class="btn btn-success btn-flat m-b-30 m-t-30">Iniciar Sesión</button>
                         <div class="social-login-content">
                             <div class="social-button">
-                                <button type="button" class="btn social facebook btn-flat btn-addon mb-3"><i class="ti-facebook"></i>Sign in with facebook</button>
-                                <button type="button" class="btn social twitter btn-flat btn-addon mt-2"><i class="ti-twitter"></i>Sign in with twitter</button>
+                                <a class="btn btn-default" asp-action="Microsoft">Iniciar sesión con cuenta de Microsoft</a>
+                                <a class="btn btn-default" asp-action="Microsoft">Iniciar sesión con cuenta de Google</a>
                             </div>
                         </div>
-                        <div class="register-link m-t-15 text-center">
+                        @*<div class="register-link m-t-15 text-center">
                             <p>Don't have account ? <a href="#"> Sign Up Here</a></p>
-                        </div>
+                        </div>*@
                     </form>
                 </div>
             </div>
@@ -95,10 +95,10 @@
 
     </div>
 
-    <div class="row">
+    @*<div class="row">
         <a asp-action="Microsoft">Microsoft</a>
 
-    </div>
+    </div>*@
     <environment include="Development">
 
 
@@ -106,7 +106,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        @*<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>*@
         <script src="~/templateAdmin/assets/js/main.js"></script>
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
@@ -120,7 +120,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        @*<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>*@
         <script src="~/templateAdmin/assets/js/main.js"></script>
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
