--- a/PreOrclFrontEnd/Views/Home/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Home/Index.cshtml
@@ -80,7 +80,7 @@
         </div>
         <!-- /Widgets -->
         <!--  Traffic  -->
-        <div class="row">
+        @*<div class="row">
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-body">
@@ -129,7 +129,7 @@
                     <div class="card-body"></div>
                 </div>
             </div><!-- /# column -->
-        </div>
+        </div>*@
         <!--  /Traffic -->
         <div class="clearfix"></div>
         <!-- Orders -->
@@ -269,7 +269,7 @@
             <div class="col-lg-6">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title box-title">To Do List</h4>
+                        <h4 class="card-title box-title">Listado pendientes</h4>
                         <div class="card-content">
                             <div class="todo-list">
                                 <div class="tdl-holder">
@@ -325,67 +325,78 @@
                 </div><!-- /.card -->
             </div>
 
-            <div class="col-lg-6">
+            <div class="col-md-12 col-lg-4">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title box-title">Live Chat</h4>
-                        <div class="card-content">
-                            <div class="messenger-box">
-                                <ul>
-                                    <li>
-                                        <div class="msg-received msg-container">
-                                            <div class="avatar">
-                                                <img src="images/avatar/64-1.jpg" alt="">
-                                                <div class="send-time">11.11 am</div>
-                                            </div>
-                                            <div class="msg-box">
-                                                <div class="inner-box">
-                                                    <div class="name">
-                                                        John Doe
-                                                    </div>
-                                                    <div class="meg">
-                                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis sunt placeat velit ad reiciendis ipsam
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div><!-- /.msg-received -->
-                                    </li>
-                                    <li>
-                                        <div class="msg-sent msg-container">
-                                            <div class="avatar">
-                                                <img src="images/avatar/64-2.jpg" alt="">
-                                                <div class="send-time">11.11 am</div>
-                                            </div>
-                                            <div class="msg-box">
-                                                <div class="inner-box">
-                                                    <div class="name">
-                                                        John Doe
-                                                    </div>
-                                                    <div class="meg">
-                                                        Hay how are you doing?
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div><!-- /.msg-sent -->
-                                    </li>
-                                </ul>
-                                <div class="send-mgs">
-                                    <div class="yourmsg">
-                                        <input class="form-control" type="text">
-                                    </div>
-                                    <button class="btn msg-send-btn">
-                                        <i class="pe-7s-paper-plane"></i>
-                                    </button>
-                                </div>
-                            </div><!-- /.messenger-box -->
+                        <!-- <h4 class="box-title">Chandler</h4> -->
+                        <div class="calender-cont widget-calender">
+                            <div id="calendar"></div>
                         </div>
-                    </div> <!-- /.card-body -->
+                    </div>
                 </div><!-- /.card -->
             </div>
+
+            @*<div class="col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title box-title">Live Chat</h4>
+                    <div class="card-content">
+                        <div class="messenger-box">
+                            <ul>
+                                <li>
+                                    <div class="msg-received msg-container">
+                                        <div class="avatar">
+                                            <img src="images/avatar/64-1.jpg" alt="">
+                                            <div class="send-time">11.11 am</div>
+                                        </div>
+                                        <div class="msg-box">
+                                            <div class="inner-box">
+                                                <div class="name">
+                                                    John Doe
+                                                </div>
+                                                <div class="meg">
+                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis sunt placeat velit ad reiciendis ipsam
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div><!-- /.msg-received -->
+                                </li>
+                                <li>
+                                    <div class="msg-sent msg-container">
+                                        <div class="avatar">
+                                            <img src="images/avatar/64-2.jpg" alt="">
+                                            <div class="send-time">11.11 am</div>
+                                        </div>
+                                        <div class="msg-box">
+                                            <div class="inner-box">
+                                                <div class="name">
+                                                    John Doe
+                                                </div>
+                                                <div class="meg">
+                                                    Hay how are you doing?
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div><!-- /.msg-sent -->
+                                </li>
+                            </ul>
+                            <div class="send-mgs">
+                                <div class="yourmsg">
+                                    <input class="form-control" type="text">
+                                </div>
+                                <button class="btn msg-send-btn">
+                                    <i class="pe-7s-paper-plane"></i>
+                                </button>
+                            </div>
+                        </div><!-- /.messenger-box -->
+                    </div>
+                </div> <!-- /.card-body -->
+            </div><!-- /.card -->
+        </div>*@
         </div>
         <!-- /To Do and Live Chat -->
         <!-- Calender Chart Weather  -->
-        <div class="row">
+        @*<div class="row">
             <div class="col-md-12 col-lg-4">
                 <div class="card">
                     <div class="card-body">
@@ -415,10 +426,10 @@
                     </div>
                 </div><!-- /.card -->
             </div>
-        </div>
+        </div>*@
         <!-- /Calender Chart Weather -->
         <!-- Modal - Calendar - Add New Event -->
-        <div class="modal fade none-border" id="event-modal">
+        @*<div class="modal fade none-border" id="event-modal">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -433,10 +444,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
         <!-- /#event-modal -->
         <!-- Modal - Calendar - Add Category -->
-        <div class="modal fade none-border" id="add-category">
+        @*<div class="modal fade none-border" id="add-category">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -470,7 +481,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
         <!-- /#add-category -->
         </div>
     </div>
