--- a/PreOrclFrontEnd/Views/SisPerPersonas/Delete.cshtml
+++ b/PreOrclFrontEnd/Views/SisPerPersonas/Delete.cshtml
@@ -4,108 +4,201 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>SisPerPersona</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.per_nombre_razon)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_nombre_razon)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_apellido_comercial)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_apellido_comercial)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_nit)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_nit)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_dui_nrc)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_dui_nrc)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_direccion_departamento)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_direccion_departamento)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_direccion_municipio)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_direccion_municipio)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_direccion)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_direccion)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_telefono)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_telefono)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_movil)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_movil)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_codigo)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_codigo)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_nacionalidad)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_nacionalidad)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_tipo_contribullente)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_tipo_contribullente)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_dir_cli)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_dir_cli)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.per_cobros)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.per_cobros)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="per_IDPER" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="breadcrumbs">
+    <div class="breadcrumbs-inner">
+        <div class="row m-0">
+            <div class="col-sm-4">
+                <div class="page-header float-left">
+                    <div class="page-title">
+                        <h1>Eliminar</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="page-header float-right">
+                    <div class="page-title">
+                        <ol class="breadcrumb text-right">
+                            <li><a href="#">Personas</a></li>
+                            <li><a asp-action="Index">Listado Personas</a></li>
+                            <li class="active">Eliminar</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<div class="content">
+    <div class="animated fadeIn">
+
+        <div class="row">
+
+            <div class="col-sm-12">
+                <div class="card">
+                    <div class="card-header">
+                        <strong>Eliminar Persona</strong> <small></small>
+                    </div>
+                    <form asp-action="Delete" id="deleteForm" data-ajax-begin="onBegin" data-ajax-complete="onComplete"
+                          data-ajax-failure="onFailed" data-ajax-success="onSuccess" data-ajax="true" data-ajax-method="POST">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input type="hidden" asp-for="per_IDPER" />
+                        <div class="card-body card-block">
+                            <div class="card-body card-block">
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_nombre_razon" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-user"></i></div>
+                                            <input asp-for="per_nombre_razon" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_nombre_razon" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_apellido_comercial" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-users"></i></div>
+                                            <input asp-for="per_apellido_comercial" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_apellido_comercial" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_nit" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-check-square-o"></i></div>
+                                            <input asp-for="per_nit" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_nit" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_dui_nrc" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-info"></i></div>
+                                            <input asp-for="per_dui_nrc" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_dui_nrc" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_direccion_departamento" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-sitemap"></i></div>
+                                            <input asp-for="per_direccion_departamento" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_direccion_departamento" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_direccion_municipio" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-puzzle-piece"></i></div>
+                                            <input asp-for="per_direccion_municipio" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_direccion_municipio" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_direccion" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-envelope-o"></i></div>
+                                            <input asp-for="per_direccion" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_direccion" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_telefono" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-phone-square"></i></div>
+                                            <input asp-for="per_telefono" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_telefono" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_movil" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-mobile"></i></div>
+                                            <input asp-for="per_movil" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_movil" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_email" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
+                                            <input asp-for="per_email" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_email" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_codigo" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-tag"></i></div>
+                                            <input asp-for="per_codigo" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_codigo" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="per_nacionalidad" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-flag"></i></div>
+                                            <input asp-for="per_nacionalidad" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_nacionalidad" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-4">
+                                        <label asp-for="per_tipo_contribullente" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa  fa-folder-o"></i></div>
+                                            <input asp-for="per_tipo_contribullente" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_tipo_contribullente" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <label asp-for="per_dir_cli" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-location-arrow"></i></div>
+                                            <input asp-for="per_dir_cli" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_dir_cli" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <label asp-for="per_cobros" class="form-control-label"></label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><i class="fa fa-level-up"></i></div>
+                                            <input asp-for="per_cobros" class="form-control" disabled="disabled" />
+                                        </div>
+                                        <span asp-validation-for="per_cobros" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-sm-12 text-right">
+                                        <input type="button" value="Eliminar" onclick="GuardarNotificacion('#deleteForm','@Url.Action("Delete")','@Url.Action("Index")')" class="btn btn-default" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+</div>
+@section Scripts {
+
+
+
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/lib/Microsoft.jQuery.Unobtrusive.Ajax/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/js/custoSweetAlertAjax.js"></script>
+
+}
