--- a/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
@@ -92,13 +92,13 @@
                 </a>
 
                 <div class="user-menu dropdown-menu">
-                    <a class="nav-link" href="#"><i class="fa fa- user"></i>My Profile</a>
+                    <a class="nav-link" href="#"><i class="fa fa- user"></i>Mi Perfil</a>
 
-                    <a class="nav-link" href="#"><i class="fa fa- user"></i>Notifications <span class="count">13</span></a>
+                    @*<a class="nav-link" href="#"><i class="fa fa- user"></i>Notifications <span class="count">13</span></a>*@
 
-                    <a class="nav-link" href="#"><i class="fa fa -cog"></i>Settings</a>
+                    <a class="nav-link" href="#"><i class="fa fa -cog"></i>Configuraciones</a>
 
-                    <a class="nav-link"  asp-area="" asp-controller="Auth" asp-action="Logout"><i class="fa fa-power -off"></i>Logout</a>
+                    <a class="nav-link"  asp-area="" asp-controller="Auth" asp-action="Logout"><i class="fa fa-power -off"></i>Cerrar sesión</a>
                 </div>
             </div>
 
